---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TCH006_2.py:4:4: TCH006 Invalid string member in `X | Y`-style union type
  |
4 | x: "int" | str  # TCH006
  |    ^^^^^ TCH006
5 | x: ("int" | str) | "bool"  # TCH006
  |

TCH006_2.py:5:5: TCH006 Invalid string member in `X | Y`-style union type
  |
4 | x: "int" | str  # TCH006
5 | x: ("int" | str) | "bool"  # TCH006
  |     ^^^^^ TCH006
  |

TCH006_2.py:5:20: TCH006 Invalid string member in `X | Y`-style union type
  |
4 | x: "int" | str  # TCH006
5 | x: ("int" | str) | "bool"  # TCH006
  |                    ^^^^^^ TCH006
  |

TCH006_2.py:12:20: TCH006 Invalid string member in `X | Y`-style union type
   |
12 | z: list[str, str | "int"] = []  # TCH006
   |                    ^^^^^ TCH006
13 | 
14 | type A = Value["int" | str]  # OK
   |

TCH006_2.py:16:30: TCH006 Invalid string member in `X | Y`-style union type
   |
14 | type A = Value["int" | str]  # OK
15 | 
16 | OldS = TypeVar('OldS', int | 'str', str)  # TCH006
   |                              ^^^^^ TCH006
   |


